crates/vaab-types/tests/snapshots/errors__a_pure_closure_inside_a_pure_function_cannot_print.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"pure to show(items: list of Text) {\\n\\\n         \\x20   items.each(item -> print(item))\\n\\\n         }\\n\")"
---
[not-pure] Error: `show` is declared `pure`, so it cannot call `print`
   ╭─[ example.vaab:2:24 ]
   │
 1 │ pure to show(items: list of Text) {
   │         ──┬─  
   │           ╰─── `show` is declared `pure` here
 2 │     items.each(item -> print(item))
   │                        ─────┬─────  
   │                             ╰─────── this calls `print`
   │ 
   │ Help: use `print` before or after the `pure` function, not inside it
───╯
