crates/vaab-types/tests/snapshots/errors__a_pure_function_cannot_build_a_channel.snap
---
source: crates/vaab-types/tests/errors.rs
expression: "errors(\"pure to make() returns channel of Int = Channel.new(of: Int, size: 1)\\n\")"
---
[not-pure] Error: `make` is declared `pure`, so it cannot build a channel
   ╭─[ example.vaab:1:41 ]
   │
 1 │ pure to make() returns channel of Int = Channel.new(of: Int, size: 1)
   │                        ───────┬──────   ──────────────┬──────────────  
   │                               │                       ╰──────────────── this builds a channel
   │                               │                                        
   │                               ╰──────────────────────────────────────── `make` is declared `pure` here
   │ 
   │ Help: build channels and `shared` values outside the `pure` function, and pass them in
───╯
